# AI-Pull-Request-Reviewer

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  chunker.py  diff_parser.py  embeddings.py  llm_review.py  main.py  repo_fetcher.py  retriever.py  vector_store.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  analyze.py  auth.py  diff.py  evaluation.py  health.py  review.py
backend/app/core/: __init__.py  config.py
backend/app/github/: __init__.py  client.py  url_parser.py
backend/app/schemas/: auth.py  diff.py  evaluation.py  review.py
backend/app/services/: ai_review_service.py  auth_cookie.py  auth_session_store.py  evaluation_store.py  github_auth_service.py  github_oauth_service.py
backend/tests/: test_auth.py  test_diff_parser.py
frontend/: .env.example  Dockerfile  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: GitHubAuthPanel.tsx  PrPreviewForm.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  skeleton.tsx
frontend/src/lib/: config.ts
