[project]
name = "repo-aware-reviewer-backend"
version = "0.1.0"
description = "Backend for Repo-Aware AI Pull Request Reviewer - Phase 1 scaffold"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
